// Prisma schema — the single source of truth for the database. Models are added per feature as
// the milestones progress; every one of them follows the naming conventions below.
//
// Naming conventions (established by M2-T01; every later model inherits them):
//   - Models are singular PascalCase (`User`, `Transaction`), mapped to a snake_case plural table
//     with `@@map` (`users`, `transactions`). Plural because a table holds many rows, and because
//     several natural model names — `user`, `order` — are reserved words in PostgreSQL.
//   - Fields are camelCase in the schema, mapped to snake_case columns with `@map`
//     (`passwordHash` → `password_hash`). TypeScript reads as TypeScript; SQL reads as SQL.
//   - Primary keys are `id String @id @default(uuid()) @db.Uuid` — a real PostgreSQL `uuid`
//     column, not text, so it indexes and compares as a native type.
//   - Every model carries `createdAt` / `updatedAt` (`@default(now())` / `@updatedAt`).
//   - Enums are singular PascalCase with SCREAMING_SNAKE_CASE values, mapped with `@@map` too.
//   - Money is always an `Int` of cents, never `Float` or `Decimal` (ADR-0005).
//   - Every domain entity carries a `userId` (ADR-0006), so the single-user app becomes
//     multi-user without a structural migration.
//
// The client is generated as TypeScript into `src/generated/prisma` (ADR-0017): CommonJS, with
// extensionless relative imports, so the API's `module: Node16` build and the ts-jest CommonJS
// transform consume it unchanged. That output is git-ignored and regenerated by `postinstall` —
// never hand-edited, like the Orval client (ADR-0004).
//
// The connection URL is deliberately absent: Prisma 7 takes it from `prisma.config.ts` for the
// CLI, and from the driver adapter in `PrismaService` at runtime.

generator client {
  provider            = "prisma-client"
  output              = "../src/generated/prisma"
  moduleFormat        = "cjs"
  importFileExtension = ""
}

datasource db {
  provider = "postgresql"
}

/// The person who signs in. The application is single-user (ADR-0006): there is no sign-up
/// screen, and the one account is created by the seed (M2-T02). Only the hash of the password is
/// ever stored — argon2id, produced by the hashing service that same ticket adds.
model User {
  id           String   @id @default(uuid()) @db.Uuid
  email        String   @unique
  passwordHash String   @map("password_hash")
  name         String
  locale       String   @default("pt-BR")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  accounts        Account[]
  categories      Category[]
  cashboxes       Cashbox[]
  transactions    Transaction[]
  recurrenceRules RecurrenceRule[]
  csvImportModels CsvImportModel[]
  budgets         Budget[]
  financialInstitutions FinancialInstitution[]
  instruments     Instrument[]
  assetListings   AssetListing[]
  marketQuotes    MarketQuote[]
  accountInitialBalances AccountInitialBalance[]
  investmentTrades       InvestmentTrade[]

  @@map("users")
}

/// One user-owned spending plan for a fixed calendar quarter.
model Budget {
  id                       String   @id @default(uuid()) @db.Uuid
  userId                   String   @map("user_id") @db.Uuid
  year                     Int
  quarter                  Int
  estimatedQuarterlyIncome Int      @map("estimated_quarterly_income")
  note                     String?
  createdAt                DateTime @default(now()) @map("created_at")
  updatedAt                DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  allocations BudgetAllocation[]

  @@unique([userId, year, quarter])
  @@map("budgets")
}

/// One top-level Expense Category's effective monthly limit within a Budget. Percentages are basis
/// points (25.50% is 2550), which keeps their two-decimal contract exact without decimal storage.
model BudgetAllocation {
  id                    String   @id @default(uuid()) @db.Uuid
  budgetId              String   @map("budget_id") @db.Uuid
  categoryId            String   @map("category_id") @db.Uuid
  targetPercentageBasis Int      @map("target_percentage_basis")
  adjustedMonthlyAmount Int      @map("adjusted_monthly_amount")
  note                  String?
  createdAt             DateTime @default(now()) @map("created_at")
  updatedAt             DateTime @updatedAt @map("updated_at")

  budget   Budget   @relation(fields: [budgetId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  category Category @relation(fields: [categoryId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@unique([budgetId, categoryId])
  @@index([categoryId])
  @@map("budget_allocations")
}

/// Where money sits: a current account, a savings account, a wallet. The first domain entity
/// (M3-T01), and the template the other master-data models follow — `userId`, `isActive`,
/// `sortOrder`.
///
/// Accounts are deactivated, not deleted, once they carry transactions (ADR-0015): `isActive`
/// keeps a retired account out of the pickers while its history stays readable.
model Account {
  id             String   @id @default(uuid()) @db.Uuid
  /// Owner. Every domain entity carries it (ADR-0006), and every query filters by it.
  userId         String   @map("user_id") @db.Uuid
  name           String
  kind           AccountKind @default(BANK)
  financialInstitutionId String? @map("financial_institution_id") @db.Uuid
  isActive       Boolean  @default(true) @map("is_active")
  /// Position in the user's own ordering of the list. Ties broken by `name` at query time.
  sortOrder      Int      @default(0) @map("sort_order")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  // Restrict, not Cascade: deleting a user must never silently take the domain data with it.
  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  financialInstitution FinancialInstitution? @relation(fields: [financialInstitutionId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  initialBalances AccountInitialBalance[]

  // Restrict, not Cascade: an account with transactions cannot be deleted (ADR-0015), only
  // deactivated. Two named relations because a `TRANSFER` references an account on both sides.
  transactions            Transaction[]    @relation("TransactionAccount")
  destinationTransactions Transaction[]    @relation("TransactionDestinationAccount")
  recurrenceRules         RecurrenceRule[]
  investmentTrades        InvestmentTrade[]

  @@unique([userId, name])
  @@index([userId, isActive])
  @@index([financialInstitutionId])
  @@map("accounts")
}

enum AccountKind {
  BANK
  BROKERAGE
  EXCHANGE
  WALLET
  OTHER

  @@map("account_kind")
}

model AccountInitialBalance {
  id           String   @id @default(uuid()) @db.Uuid
  userId       String   @map("user_id") @db.Uuid
  accountId    String   @map("account_id") @db.Uuid
  instrumentId String   @map("instrument_id") @db.Uuid
  quantity     Decimal  @db.Decimal(36, 18)
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  user       User       @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  account    Account    @relation(fields: [accountId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  instrument Instrument @relation(fields: [instrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@unique([accountId, instrumentId])
  @@index([userId, instrumentId])
  @@map("account_initial_balances")
}

enum FinancialInstitutionKind {
  BANK
  BROKER
  EXCHANGE

  @@map("financial_institution_kind")
}

model FinancialInstitution {
  id        String                   @id @default(uuid()) @db.Uuid
  userId    String                   @map("user_id") @db.Uuid
  name      String
  kind      FinancialInstitutionKind
  isActive  Boolean                  @default(true) @map("is_active")
  sortOrder Int                      @default(0) @map("sort_order")
  createdAt DateTime                 @default(now()) @map("created_at")
  updatedAt DateTime                 @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  accounts Account[]

  @@unique([userId, name])
  @@index([userId, isActive])
  @@map("financial_institutions")
}

enum InstrumentType {
  FIAT
  STABLECOIN
  CRYPTOCURRENCY
  STOCK
  ETF
  ETC

  @@map("instrument_type")
}

model Instrument {
  id               String         @id @default(uuid()) @db.Uuid
  userId           String         @map("user_id") @db.Uuid
  name             String
  code             String
  type             InstrumentType
  displayPrecision Int            @default(2) @map("display_precision")
  isActive         Boolean        @default(true) @map("is_active")
  sortOrder        Int            @default(0) @map("sort_order")
  createdAt        DateTime       @default(now()) @map("created_at")
  updatedAt        DateTime       @updatedAt @map("updated_at")

  user           User          @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  accountInitialBalances AccountInitialBalance[]
  listings       AssetListing[] @relation("ListedInstrument")
  quotedListings AssetListing[] @relation("QuoteInstrument")
  marketQuotes   MarketQuote[]  @relation("MarketQuoteInstrument")
  acquiredTrades InvestmentTrade[] @relation("AcquiredInstrument")
  disposedTrades InvestmentTrade[] @relation("DisposedInstrument")
  feeTrades      InvestmentTrade[] @relation("FeeInstrument")

  @@unique([userId, code])
  @@index([userId, isActive])
  @@map("instruments")
}

model AssetListing {
  id                String   @id @default(uuid()) @db.Uuid
  userId            String   @map("user_id") @db.Uuid
  instrumentId      String   @map("instrument_id") @db.Uuid
  quoteInstrumentId String   @map("quote_instrument_id") @db.Uuid
  market            String
  ticker            String
  isin              String?
  providerSymbol    String?  @map("provider_symbol")
  isActive          Boolean  @default(true) @map("is_active")
  sortOrder         Int      @default(0) @map("sort_order")
  createdAt         DateTime @default(now()) @map("created_at")
  updatedAt         DateTime @updatedAt @map("updated_at")

  user            User       @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  instrument      Instrument @relation("ListedInstrument", fields: [instrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  quoteInstrument Instrument @relation("QuoteInstrument", fields: [quoteInstrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  investmentTrades InvestmentTrade[]
  marketQuote      MarketQuote?

  @@unique([userId, instrumentId, market, ticker])
  @@index([userId, isActive])
  @@map("asset_listings")
}

enum MarketQuoteSource {
  MANUAL

  @@map("market_quote_source")
}

enum MarketQuoteStatus {
  VALID

  @@map("market_quote_status")
}

/// The latest valid price for one listing. Historical cost remains on InvestmentTrade;
/// replacing this row only changes current valuation.
model MarketQuote {
  id                String            @id @default(uuid()) @db.Uuid
  userId            String            @map("user_id") @db.Uuid
  assetListingId    String            @unique @map("asset_listing_id") @db.Uuid
  quoteInstrumentId String            @map("quote_instrument_id") @db.Uuid
  price             Decimal           @db.Decimal(36, 12)
  marketDate        DateTime          @map("market_date") @db.Date
  synchronizedAt    DateTime          @default(now()) @map("synchronized_at") @db.Timestamptz(3)
  source            MarketQuoteSource @default(MANUAL)
  status            MarketQuoteStatus @default(VALID)

  user            User         @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  assetListing    AssetListing @relation(fields: [assetListingId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  quoteInstrument Instrument   @relation("MarketQuoteInstrument", fields: [quoteInstrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@index([userId, marketDate])
  @@index([quoteInstrumentId])
  @@map("market_quotes")
}

/// An exchange of two exact Instrument quantities within one Account. It is deliberately separate
/// from the EUR budget Transaction ledger (ADR-0025).
model InvestmentTrade {
  id                   String   @id @default(uuid()) @db.Uuid
  userId               String   @map("user_id") @db.Uuid
  accountId            String   @map("account_id") @db.Uuid
  acquiredInstrumentId String   @map("acquired_instrument_id") @db.Uuid
  acquiredQuantity     Decimal  @map("acquired_quantity") @db.Decimal(36, 18)
  disposedInstrumentId String   @map("disposed_instrument_id") @db.Uuid
  disposedQuantity     Decimal  @map("disposed_quantity") @db.Decimal(36, 18)
  feeInstrumentId      String?  @map("fee_instrument_id") @db.Uuid
  feeQuantity          Decimal? @map("fee_quantity") @db.Decimal(36, 18)
  feeValue             Int?     @map("fee_value")
  assetListingId       String?  @map("asset_listing_id") @db.Uuid
  executedAt           DateTime @map("executed_at") @db.Timestamptz(3)
  executionValue       Int      @map("execution_value")
  notes                String?
  createdAt            DateTime @default(now()) @map("created_at")
  updatedAt            DateTime @updatedAt @map("updated_at")

  user               User          @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  account            Account       @relation(fields: [accountId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  acquiredInstrument Instrument    @relation("AcquiredInstrument", fields: [acquiredInstrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  disposedInstrument Instrument    @relation("DisposedInstrument", fields: [disposedInstrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  feeInstrument      Instrument?   @relation("FeeInstrument", fields: [feeInstrumentId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  assetListing       AssetListing? @relation(fields: [assetListingId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@index([userId, executedAt])
  @@index([accountId, executedAt])
  @@index([acquiredInstrumentId])
  @@index([disposedInstrumentId])
  @@index([feeInstrumentId])
  @@index([assetListingId])
  @@map("investment_trades")
}

/// What a transaction is *for*. Income and expense are the only two sides that need classifying:
/// cashbox movements and transfers are transaction types, not categories (`AGENTS.md`, domain
/// rules), so they never carry one.
enum CategoryKind {
  EXPENSE
  INCOME

  @@map("category_kind")
}

/// A spending or earning bucket, in a tree at most two levels deep (M3-T03): a root has
/// `parentId = NULL`, a subcategory points at a root. The depth limit is a service rule — the
/// schema cannot express "a parent must itself be a root" — and arrives with M3-T04, along with
/// the automatic "Outros" subcategory and the deactivation cascade.
///
/// Uniqueness takes two constraints, not one. `@@unique([userId, parentId, name])` covers
/// subcategories, but in PostgreSQL `NULL != NULL`, so it lets a user hold any number of roots
/// called "Alimentação". The root half is a partial unique index — `WHERE parent_id IS NULL` —
/// which Prisma's schema language cannot declare, so it is hand-written into the migration
/// (`category_root_name_unique`). Both are load-bearing; neither replaces the other.
model Category {
  id       String       @id @default(uuid()) @db.Uuid
  /// Owner. Every domain entity carries it (ADR-0006), and every query filters by it.
  userId   String       @map("user_id") @db.Uuid
  /// `NULL` on a root category. A subcategory's parent is always a root.
  parentId String?      @map("parent_id") @db.Uuid
  name     String
  kind     CategoryKind
  /// `#RRGGBB`, and set on roots only: subcategories inherit their parent's colour in the charts
  /// (`prototypes/memory/04-categories.md`). Null is a normal state, not a missing value — the palette has
  /// ten swatches and the UI falls back to a colour derived from the id.
  color    String?

  isActive  Boolean  @default(true) @map("is_active")
  /// Position in the user's own ordering, within its own level. Ties broken by `name` at query time.
  sortOrder Int      @default(0) @map("sort_order")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Restrict, not Cascade: deleting a user must never silently take the domain data with it.
  user     User       @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  // Restrict here too — a root with children is deleted deliberately, child rows first, never as
  // a side effect. Note the check is immediate and per row, so a single `deleteMany` spanning
  // parents and children fails with P2003: delete the subcategories in their own statement.
  parent   Category?  @relation("CategoryTree", fields: [parentId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  children Category[] @relation("CategoryTree")

  // Restrict, not Cascade: a category with transactions cannot be deleted (ADR-0015), only
  // deactivated. Two named relations because a transaction carries both a root `categoryId` and,
  // optionally, a child `subcategoryId`.
  transactions               Transaction[]    @relation("TransactionCategory")
  subcategoryTransactions    Transaction[]    @relation("TransactionSubcategory")
  recurrenceRules            RecurrenceRule[] @relation("RecurrenceRuleCategory")
  subcategoryRecurrenceRules RecurrenceRule[] @relation("RecurrenceRuleSubcategory")
  budgetAllocations          BudgetAllocation[]

  // Subcategories only — see the note above on NULL and the partial index that covers roots.
  @@unique([userId, parentId, name])
  @@index([userId, parentId, isActive])
  @@map("categories")
}

/// Money set aside for a purpose: an emergency fund, a holiday, the next car. A cashbox is a
/// *transaction type* rather than a category (`AGENTS.md`, domain rules) — money moves in and out
/// of it with `CASHBOX_IN` / `CASHBOX_OUT` / `CASHBOX_TRANSFER`, and none of those count as an
/// expense in the reports.
///
/// The balance is deliberately **not** a column: it is the initial balance plus confirmed movements,
/// computed in M4-T07. A stored total is one crash away from disagreeing with the transactions that
/// produced it. `targetAmount` is only a goal to draw progress against, and never enters any calculation.
model Cashbox {
  id           String   @id @default(uuid()) @db.Uuid
  /// Owner. Every domain entity carries it (ADR-0006), and every query filters by it.
  userId       String   @map("user_id") @db.Uuid
  name         String
  /// Free text: what this money is for. Null and empty mean the same thing to the UI.
  description  String?
  /// Balance already held when the cashbox starts being tracked, in **cents** (ADR-0005).
  initialBalance Int @default(0) @map("initial_balance")
  /// Optional goal, in **cents** (ADR-0005). Null means the cashbox simply accumulates.
  targetAmount Int?     @map("target_amount")
  isActive     Boolean  @default(true) @map("is_active")
  /// Position in the user's own ordering of the list. Ties broken by `name` at query time.
  sortOrder    Int      @default(0) @map("sort_order")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  // Restrict, not Cascade: deleting a user must never silently take the domain data with it.
  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  // SetNull, not Restrict: a zero-balance cashbox may be deleted with entries still referencing it
  // (ADR-0019). The `cashboxLabel` / `destinationCashboxLabel` snapshot on `Transaction` is what
  // keeps its name readable in history once this relation goes null.
  transactions            Transaction[] @relation("TransactionCashbox")
  destinationTransactions Transaction[] @relation("TransactionDestinationCashbox")

  @@unique([userId, name])
  @@index([userId, isActive])
  @@map("cashboxes")
}

/// What kind of movement a transaction is. Cashbox movements and transfers are types here, not
/// categories (`AGENTS.md`, domain rules, ADR-0007) — only `EXPENSE` counts as an expense in
/// reports, and `amount` is always positive with its sign derived from this field.
enum TransactionType {
  INCOME
  EXPENSE
  TRANSFER
  CASHBOX_IN
  CASHBOX_OUT
  CASHBOX_TRANSFER

  @@map("transaction_type")
}

/// Whether a transaction counts. Balances and reports only include `CONFIRMED` rows (ADR-0012);
/// `DRAFT` is where a voice-entered transaction lands until the user approves it, and affects
/// nothing until then.
enum TransactionStatus {
  DRAFT
  CONFIRMED

  @@map("transaction_status")
}

/// How a transaction was created. Recurring generation is added in M7 (ADR-0014); the value exists
/// here so the column and its type never need a later migration.
enum TransactionSource {
  MANUAL
  VOICE
  RECURRING
  IMPORT_CSV

  @@map("transaction_source")
}

/// How often a `RecurrenceRule` fires. `interval` multiplies the unit — e.g. `MONTHLY` with
/// `interval = 2` is bimonthly (M7-T01, `docs/adr/0014-unified-recurrence-and-installments.md`).
enum Frequency {
  MONTHLY
  YEARLY

  @@map("frequency")
}

/// A template that produces transactions over time — long-running fixed expenses and purchase
/// installments are the same structural problem (ADR-0014): `totalOccurrences` tells them apart,
/// null for open-ended recurrence, a value for installments. The rule is a template, not a live
/// binding: fields are copied onto each generated transaction, so editing the rule never rewrites
/// history already produced.
///
/// `generatedUntil` and the unique index on `Transaction(recurrenceRuleId, referenceMonth)`
/// (hand-written into the migration) are the two idempotency guards ADR-0014 calls for; the
/// generator that advances `generatedUntil` lands in M7-T02.
model RecurrenceRule {
  id     String          @id @default(uuid()) @db.Uuid
  /// Owner. Every domain entity carries it (ADR-0006), and every query filters by it.
  userId String          @map("user_id") @db.Uuid
  /// Reuses `TransactionType`; `CASHBOX_*`/`TRANSFER` are left to service-level validation, same
  /// as `Transaction` (M7-T02/T03).
  type   TransactionType
  /// Always positive when present, in **cents** (ADR-0005) — copied onto each generated
  /// transaction. Null means a variable amount (e.g. a utility bill); legal only when
  /// `autoConfirm = false` (CHECK below, ADR-0020).
  amount Int?

  /// Copied onto each generated transaction's `description`.
  description String
  notes       String?

  /// Default account for generated entries.
  accountId     String? @map("account_id") @db.Uuid
  /// Root category.
  categoryId    String? @map("category_id") @db.Uuid
  /// Child of `categoryId`.
  subcategoryId String? @map("subcategory_id") @db.Uuid

  frequency  Frequency
  /// Every N months/years, per `frequency`.
  interval   Int       @default(1)
  /// 1–31 (CHECK below); a day that doesn't exist in the target month — 31 in February — falls
  /// back to the last day of that month, in the generator (ADR-0014).
  dayOfMonth Int       @map("day_of_month")

  startDate DateTime  @map("start_date") @db.Date
  endDate   DateTime? @map("end_date") @db.Date

  /// Null = open-ended recurrence; a value = installments, and must be >= 1 (CHECK below).
  totalOccurrences Int? @map("total_occurrences")
  /// Exact purchase total for installment plans, in cents. Null for open-ended recurrences.
  totalAmount      Int? @map("total_amount")

  /// Whether a generated entry starts as `CONFIRMED` (fixed amount) or `DRAFT` (variable amount,
  /// e.g. a utility bill) — ADR-0014.
  autoConfirm Boolean @default(true) @map("auto_confirm")
  isActive    Boolean @default(true) @map("is_active")

  /// Rolling generation horizon watermark; null means the rule has never been generated.
  generatedUntil DateTime? @map("generated_until") @db.Date

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Restrict, not Cascade: deleting a user must never silently take the domain data with it.
  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  // Restrict, not Cascade: an account/category with rules is deactivated, not deleted (ADR-0015).
  account     Account?  @relation(fields: [accountId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  category    Category? @relation("RecurrenceRuleCategory", fields: [categoryId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  subcategory Category? @relation("RecurrenceRuleSubcategory", fields: [subcategoryId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  transactions Transaction[]

  @@index([userId, isActive])
  @@index([userId, isActive, generatedUntil])
  @@map("recurrence_rules")
}

/// A reusable description of one bank CSV layout. It deliberately has no relation to
/// `Transaction`: deleting a model only removes this import aid, never imported history.
model CsvImportModel {
  id              String   @id @default(uuid()) @db.Uuid
  userId          String   @map("user_id") @db.Uuid
  name            String
  headerLineCount Int      @map("header_line_count")
  separator       String
  dateHeader      String   @map("date_header")
  descriptionHeader String @map("description_header")
  amountHeader    String   @map("amount_header")
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@index([userId])
  @@map("csv_import_models")
}

/// The domain core: every deposit, expense, transfer and cashbox movement is one row here, typed by
/// `type` (M4-T04 enforces which fields each type actually uses; the foreign keys themselves stay
/// nullable at the schema level because the constraint is per-type, not universal).
///
/// `date` is when it happened; `settlementDate` is when it affects balances. `referenceMonth` is
/// the first day of the accounting month, which may differ from the settlement month.
///
/// `cashboxId` and `destinationCashboxId` are the one deliberate departure from the `Restrict`
/// every other relation here uses: they are `SetNull`, so deleting a zero-balance cashbox does not
/// drag its history down with it (ADR-0019). `cashboxLabel` and `destinationCashboxLabel` sit next to
/// those ids for exactly that reason — a name snapshotted at write time, so the label a statement or
/// report shows survives the cashbox itself being deleted. Every other foreign key stays `Restrict`:
/// an `Account` or `Category` with transactions cannot be deleted at all (ADR-0015), only deactivated.
model Transaction {
  id     String            @id @default(uuid()) @db.Uuid
  /// Owner. Every domain entity carries it (ADR-0006), and every query filters by it.
  userId String            @map("user_id") @db.Uuid
  type   TransactionType
  status TransactionStatus @default(CONFIRMED)
  source TransactionSource @default(MANUAL)
  /// Always positive when present, in **cents** (ADR-0005) — sign is derived from `type`, never
  /// stored. Null means unknown yet; legal only when `status = 'DRAFT'` (CHECK below, ADR-0020).
  amount Int?

  /// When the purchase happened (ADR-0009).
  date           DateTime @db.Date
  /// Which accounting month it reports in, normalized to the first day.
  referenceMonth DateTime @map("reference_month") @db.Date
  /// When money settles: equal to `date` for non-card rows and no earlier than `date` for cards.
  settlementDate DateTime @default(now()) @map("settlement_date") @db.Date

  /// Required: a statement row's primary text, and a `search` target (M4-T08).
  description String
  /// Free text, the second `search` target (M4-T08).
  notes       String?

  /// Valid only on an EXPENSE; card purchase-date edits preserve `settlementDate`.
  isCreditCard Boolean @default(false) @map("is_credit_card")

  accountId            String? @map("account_id") @db.Uuid
  /// `TRANSFER` destination only.
  destinationAccountId String? @map("destination_account_id") @db.Uuid
  /// Root category.
  categoryId           String? @map("category_id") @db.Uuid
  /// Child of `categoryId`.
  subcategoryId        String? @map("subcategory_id") @db.Uuid
  cashboxId            String? @map("cashbox_id") @db.Uuid
  /// `CASHBOX_TRANSFER` destination only.
  destinationCashboxId String? @map("destination_cashbox_id") @db.Uuid

  /// Cashbox name snapshotted at write time (ADR-0019) — see the model doc comment above.
  cashboxLabel            String? @map("cashbox_label")
  destinationCashboxLabel String? @map("destination_cashbox_label")

  /// The rule that generated this transaction, if any (M7). `SetNull`: deleting a rule must never
  /// delete the history it produced (ADR-0014) — see the model doc comment above for the family.
  recurrenceRuleId  String? @map("recurrence_rule_id") @db.Uuid
  /// This entry's position among the rule's installments, e.g. 3 of 12. Null on a manual entry.
  installmentNumber Int?    @map("installment_number")
  /// The rule's `totalOccurrences` at generation time. Null on a manual entry.
  installmentTotal  Int?    @map("installment_total")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Restrict, not Cascade: deleting a user must never silently take the domain data with it.
  user User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  account            Account? @relation("TransactionAccount", fields: [accountId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  destinationAccount Account? @relation("TransactionDestinationAccount", fields: [destinationAccountId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  category    Category? @relation("TransactionCategory", fields: [categoryId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  subcategory Category? @relation("TransactionSubcategory", fields: [subcategoryId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  // SetNull here, and only here — see the model doc comment above for why (ADR-0019).
  cashbox            Cashbox? @relation("TransactionCashbox", fields: [cashboxId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  destinationCashbox Cashbox? @relation("TransactionDestinationCashbox", fields: [destinationCashboxId], references: [id], onDelete: SetNull, onUpdate: Cascade)

  // SetNull, not Restrict: deleting a rule must never delete the history it produced (ADR-0014).
  recurrenceRule RecurrenceRule? @relation(fields: [recurrenceRuleId], references: [id], onDelete: SetNull, onUpdate: Cascade)

  @@index([userId, referenceMonth, status])
  @@index([userId, referenceMonth, status, description, settlementDate(sort: Desc), createdAt(sort: Desc), id(sort: Desc)], map: "transactions_month_description_sort_idx")
  @@index([userId, type, referenceMonth])
  @@index([userId, categoryId, referenceMonth])
  @@index([userId, cashboxId])
  @@map("transactions")
}
